[multiline] Fix font rendering issue on Firefox (closes #21)
Firefox on Mac and PC render the Cardo font with different baslines, so
for the 120px text on the figures, this commit replaces Cardo with Times
New Roman, a very similar font.

--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -435,6 +435,9 @@ blockquote .cite-parent-p {
 .stat-figure {
   font-size: 120px;
   line-height: 125px;
+  font-family: 'Times New Roman', serif;
+  position: relative;
+  bottom: 10px;
   @media (max-width: 767px) and (min-width: 501px) {
     font-size: 100px;
   }
